Complete most of functions without debug. Modify the api documents
